Updated circleci config to override env vars for publish

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,9 @@ jobs:
 
   publish:
     executor: node-10
+    working_directory: ~/publish
+    environment:
+      COMMERCE_SDK_INPUT_DIR: ../test/raml/valid/
     steps:
       - build
       - run:
