Fixed test:integration:redis and test:integration:redis:debug

--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -13,8 +13,8 @@
     "bundle:sdk": "npm pack ../packages/generator && mv commerce-sdk-*.tgz commerce-sdk.tgz",
     "bundle:install": "npm run bundle:core && npm run bundle:sdk && npm install",
     "test:integration": "npm run bundle:install &&  npm run test",
-    "test:integration:redis": "bundle:sdk && npm run redis --prefix ../packages/core && npm run test; npm run redis:shutdown --prefix ../packages/core",
-    "test:integration:redis:debug": "bundle:sdk && npm run redis --prefix ../packages/core && npm run test; npm run redis:shutdown:debug --prefix ../packages/core"
+    "test:integration:redis": "bundle:install && npm run redis --prefix ../packages/core && npm run test; npm run redis:shutdown --prefix ../packages/core",
+    "test:integration:redis:debug": "bundle:install && npm run redis --prefix ../packages/core && npm run test; npm run redis:shutdown:debug --prefix ../packages/core"
   },
   "dependencies": {
     "@commerce-apps/core": "file:./commerce-apps-core.tgz",
