--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,13 +59,16 @@ jobs:
       - test
 
   publish:
-    executor: node-10
+    executor:
+      name: node/default
+      tag: '10.20.1'
+    working_directory: ~/publish
     steps:
       - build
       - run:
           name: Create npmrc file to authenticate with npm registry.
           command: echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > ~/.npmrc
-      - run: npm run publish
+      - run: npm run publish --dry-run
 
 # WORKFLOWS
 workflows:
