--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,9 +59,8 @@ jobs:
       - test
 
   publish:
-    executor:
-      name: node/default
-      tag: '10.20.1'
+    executor: node-10
+    environment:
     working_directory: ~/publish
     steps:
       - build
