--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commerce-sdk",
-  "version": "1.4.3-beta.0-test",
+  "version": "1.4.3-beta.0-test2",
   "description": "Salesforce Commerce Cloud SDK",
   "homepage": "https://developer.commercecloud.com/s/",
   "repository": {
