Update npm command to bundle:sdk and update version

--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commerce-sdk-integration-test",
-  "version": "1.4.1-beta.0",
+  "version": "1.4.3-beta.0",
   "description": "Integration test package for Salesforce Commerce SDK",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
     "redis:debug:shutdown": "docker rm --force redis-commerce-sdk-debug",
     "test:basic": "mocha \"test/basic/*.test.js\" --retries 2 --timeout 5000 --reporter=xunit --reporter-options output=../reports/integrationTestsBasic.xml",
     "test:redis": "mocha \"test/redis/*.test.js\" --retries 2 --timeout 5000 --reporter=xunit --reporter-options output=../reports/integrationTestsRedis.xml",
-    "pack:sdk": "npm pack ../packages/core && npm pack ../packages/generator && npm install",
+    "bundle:sdk": "npm pack ../packages/core && npm pack ../packages/generator && npm install",
     "test": "npm run test:basic && npm run test:redis",
     "postinstall": "depcheck"
   },
@@ -73,7 +73,7 @@
     }
   },
   "devDependencies": {
-    "@commerce-apps/core": "file:commerce-apps-core-1.4.1-beta.0.tgz",
+    "@commerce-apps/core": "file:commerce-apps-core-1.4.3-beta.0.tgz",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.0.0",
