--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ commands:
   test:
     steps:
       - run: npm run test
-      - run: npm run pack:sdk --prefix integrationTests
+      - run: npm run bundle:sdk --prefix integrationTests
       - run: npm run test:integration
       - store_test_results:
           path: reports
