Updated package files to bring them inline with the new workflow specs

--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -9,12 +9,24 @@
     "lint": "eslint . --ext .ts,.js --quiet --fix",
     "pretest": "npm run lint && npm run depcheck",
     "test": "nyc mocha \"tests/*.test.*\"",
+    "redis": "npm run redis --prefix ../packages/core",
+    "redis:shutdown": "npm run redis:shutdown --prefix ../packages/core",
+    "redis:debug": "npm run redis:debug --prefix ../packages/core",
+    "redis:debug:shutdown": "npm run redis:debug:shutdown --prefix ../packages/core",
     "bundle:core": "npm pack ../packages/core && mv commerce-apps-core*.tgz commerce-apps-core.tgz",
     "bundle:sdk": "npm pack ../packages/generator && mv commerce-sdk-*.tgz commerce-sdk.tgz",
-    "bundle:install": "npm run bundle:core && npm run bundle:sdk && npm install",
-    "test:integration": "npm run bundle:install &&  npm run test",
-    "test:integration:redis": "bundle:sdk && npm run redis --prefix ../packages/core && npm run test; npm run redis:shutdown --prefix ../packages/core",
-    "test:integration:redis:debug": "bundle:sdk && npm run redis --prefix ../packages/core && npm run test; npm run redis:shutdown:debug --prefix ../packages/core"
+    "bundle:all": "npm run bundle:core && npm run bundle:sdk",
+    "bundle:install": "npm run bundle:all && npm install",
+    "bundle:clean:install": "npm run clean:all && npm install",
+    "test:integration": "npm run test",
+    "test:integration:redis": "npm run redis && npm run test; npm run redis:shutdown",
+    "test:integration:redis:debug": "npm run redis:debug && npm run test; npm run redis:debug:shutdown",
+    "test:integration:bundle": "npm run bundle:clean:install &&  npm run test",
+    "test:integration:bundle:redis": "bundle:clean:install && npm run redis && npm run test; npm run redis:shutdown",
+    "test:integration:bundle:redis:debug": "bundle:clean:install && npm run redis:debug && npm run test; npm run redis:debug:shutdown",
+    "clean": "rm -rf commerce-*.tgz",
+    "clean:node": "rm -rf node_modules",
+    "clean:all": "npm run clean && npm run clean:node"
   },
   "dependencies": {
     "@commerce-apps/core": "file:./commerce-apps-core.tgz",
