--- a/package.json
+++ b/package.json
@@ -4,10 +4,27 @@
   "scripts": {
     "postinstall": "lerna bootstrap --hoist",
     "updateApis": "lerna run updateApis",
+
     "build": "lerna run build",
+    "redis": "npm run redis --prefix ./core",
+    "redis:shutdown": "npm run redis:shutdown --prefix ./core",
+    "redis:debug": "npm run redis:debug --prefix ./core",
+    "redis:debug:shutdown": "npm run redis:debug:shutdown --prefix ./core",
     "test": "lerna run test",
     "test:debug": "lerna run test:debug",
-    "test:integration": "lerna run test:integration",
+    "test:integration:bundle": "lerna run test:integration",
+    "test:integration:bundle:redis": "lerna run test:integration:redis",
+    "run test:integration:bundle:redis:debug": "lerna run test:integration:redis:debug",
+    "test:integration": "npm run test:integration:bundle --prefix ./integrationTests",
+    "test:integration:redis": "npm run test:integration:redis --prefix ./integrationTests",
+    "run test:integration:redis:debug": "npm run test:integration:redis:debug --prefix ./integrationTests",
+    "test:all": "npm run test && npm run test:integration",
+    "test:all:redis": "npm run test && npm run test:integration:bundle:redis",
+    "test:all:redis:debug": "npm run test && npm run test:integration:bundle:redis:debug",
+    "npm run clean": "lerna run clean",
+    "npm run clean:node": "lerna run clean:node",
+    "clean:all": "npm run clean && npm run clean:node",
+
     "test:cache": "lerna run test:cache",
     "test:core": "lerna run --scope @commerce-apps/core test:debug",
     "test:generator": "lerna run --scope commerce-sdk test:debug",
