Updating circleCI to use new test workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,7 @@ commands:
       - run: npm run build
   test:
     steps:
-      - run: npm run test
-      - run: npm run test:integration
+      - run: npm run test:all
       - store_test_results:
           path: reports
 
