Adding package-lock.json to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ reports*
 
 # Local History for Visual Studio
 **/.history
+
+#Not committing this, not needed and causes issues with circleCI
+integrationTests/package-lock.json
