Updated to resolve some PR comments

--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commerce-sdk-integration-test",
-  "version": "1.4.1-beta.0",
+  "version": "1.4.4-beta.0",
   "description": "Salesforce Commerce Cloud SDK Integration Test",
   "homepage": "https://developer.commercecloud.com/s/",
   "private": true,
@@ -15,19 +15,19 @@
     "redis:shutdown": "npm run redis:shutdown --prefix ../packages/core",
     "redis:debug": "npm run redis:debug --prefix ../packages/core",
     "redis:debug:shutdown": "npm run redis:debug:shutdown --prefix ../packages/core",
-    "bundle:core": "npm pack ../packages/core && mv commerce-apps-core*.tgz commerce-apps-core.tgz",
-    "bundle:sdk": "npm pack ../packages/generator && mv commerce-sdk-*.tgz commerce-sdk.tgz",
+    "bundle:core": "rm -rf commerce-apps-core*.tgz; npm pack ../packages/core && mv commerce-apps-core*.tgz commerce-apps-core.tgz",
+    "bundle:sdk": "rm -rf commerce-sdk*.tgz; npm pack ../packages/generator && mv commerce-sdk-*.tgz commerce-sdk.tgz",
     "bundle:all": "npm run bundle:core && npm run bundle:sdk",
     "bundle:install": "npm run bundle:all && npm install",
-    "bundle:clean:install": "npm run clean:all && npm install",
+    "bundle:clean:install": "npm run clean:all && npm run bundle:install",
     "test:integration": "npm run test",
     "test:integration:redis": "npm run redis && npm run test; npm run redis:shutdown",
     "test:integration:redis:debug": "npm run redis:debug && npm run test; npm run redis:debug:shutdown",
-    "test:integration:bundle": "npm run bundle:install &&  npm run test",
-    "test:integration:bundle:redis": "bundle:install && npm run redis && npm run test; npm run redis:shutdown",
-    "test:integration:bundle:redis:debug": "bundle:install && npm run redis:debug && npm run test; npm run redis:debug:shutdown",
-    "clean": "rm -rf commerce-*.tgz",
-    "clean:node": "rm -rf node_modules",
+    "test:integration:bundle": "npm run bundle:install && npm run test",
+    "test:integration:bundle:redis": "npm run bundle:install && npm run redis && npm run test; npm run redis:shutdown",
+    "test:integration:bundle:redis:debug": "npm run bundle:install && npm run redis:debug && npm run test; npm run redis:debug:shutdown",
+    "clean": "rm -rf commerce-*.tgz || true",
+    "clean:node": "rm -rf node_modules || true",
     "clean:all": "npm run clean && npm run clean:node"
   },
   "dependencies": {
