Updated to resolve some PR comments

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:debug": "lerna run test:debug",
     "test:integration:bundle": "lerna run test:integration",
     "test:integration:bundle:redis": "lerna run test:integration:redis",
-    "run test:integration:bundle:redis:debug": "lerna run test:integration:redis:debug",
+    "test:integration:bundle:redis:debug": "lerna run test:integration:redis:debug",
     "test:integration": "npm run test:integration:bundle --prefix ./integrationTests",
     "test:integration:redis": "npm run test:integration:redis --prefix ./integrationTests",
     "run test:integration:redis:debug": "npm run test:integration:redis:debug --prefix ./integrationTests",
