Cleaning up typescript config

--- a/integrationTests/tsconfig.json
+++ b/integrationTests/tsconfig.json
@@ -1,11 +1,7 @@
 {
     "extends": "../base.tsconfig.json",
     // NOTE: Everything except what you want compiled into JS should be in the exclusions.
-    "compilerOptions": {
-        "outDir": "./dist"
-    },
     "exclude": [
-        "node_modules",
-        "dist"
+        "node_modules"
     ]
 }
