Updated to resolve some PR comments

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:integration:bundle:redis:debug": "lerna run test:integration:redis:debug",
     "test:integration": "npm run test:integration:bundle --prefix ./integrationTests",
     "test:integration:redis": "npm run test:integration:redis --prefix ./integrationTests",
-    "run test:integration:redis:debug": "npm run test:integration:redis:debug --prefix ./integrationTests",
+    "test:integration:redis:debug": "npm run test:integration:redis:debug --prefix ./integrationTests",
     "test:all": "npm run test && npm run test:integration",
     "test:all:redis": "npm run test && npm run test:integration:bundle:redis",
     "test:all:redis:debug": "npm run test && npm run test:integration:bundle:redis:debug",
