--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,12 @@ packages/*/dist
 packages/generator/renderedTemplates/
 .vscode
 
-**/*.js
 reports*
 
 .DS_Store
+
+# Local History for Visual Studio
+**/.history
+
+#Not committing this, not needed and causes issues with circleCI
+integrationTests/package-lock.json
