--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -18,16 +18,16 @@
   ],
   "scripts": {
     "depcheck": "depcheck",
+    "lint": "eslint . --ext .ts --quiet --fix",
     "pretest": "npm run lint && npm run depcheck",
-    "test:debug": "nyc mocha \"test/**/*.test.ts\"",
+    "build": "npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
     "test": "nyc mocha \"test/**/*.test.ts\" --reporter=xunit --reporter-options output=../../reports/generator.xml",
-    "test:integration": "nyc --check-coverage=false mocha \"test_integration/**/*.ts\" --retries 2 --timeout 5000 --reporter=xunit --reporter-options output=../../reports/generator-integration.xml",
+    "test:debug": "nyc mocha \"test/**/*.test.ts\"",
+    "clean:node": "rm -rf node_modules",
+    "clean:all": "npm run clean:node",
     "start": "node dist/index.js",
-    "clean": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts cleanInputDir",
     "buildOperationList": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts buildOperationList",
     "renderTemplates": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderTemplates",
-    "build": "npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
-    "lint": "eslint . --ext .ts --quiet --fix",
     "updateApis": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts updateApis",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect"
