Minor syntax fix

--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -37,7 +37,7 @@
     "all": true,
     "cache": false,
     "include": [
-      "node_modules/@commerce-apps/core/dist/**",
+      "node_modules/@commerce-apps/core/dist/**"
     ],
     "excludeNodeModules": false,
     "source-map": false,
