Fixed few bugs in scripts

--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -22,10 +22,10 @@
     "bundle:install": "npm run bundle:all && npm install",
     "bundle:clean:install": "npm run clean:all && npm run bundle:install",
     "test:integration": "npm run test",
-    "test:integration:redis": "npm run redis && npm run test; npm run redis:shutdown",
+    "test:integration:redis": "npm run redis && npm run test:redis; npm run redis:shutdown",
     "test:integration:redis:debug": "npm run redis:debug && npm run test; npm run redis:debug:shutdown",
-    "test:integration:bundle": "npm run bundle:install && npm run test",
-    "test:integration:bundle:redis": "npm run bundle:install && npm run redis && npm run test; npm run redis:shutdown",
+    "test:integration:bundle": "npm run bundle:install && npm run test && npm run test:redis",
+    "test:integration:bundle:redis": "npm run bundle:install && npm run redis && npm run test && npm run test:redis; npm run redis:shutdown",
     "test:integration:bundle:redis:debug": "npm run bundle:install && npm run redis:debug && npm run test; npm run redis:debug:shutdown",
     "clean": "rm -rf commerce-*.tgz || true",
     "clean:node": "rm -rf node_modules || true",
