--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -131,8 +131,10 @@
         }
       ],
       "jsdoc/require-param-name": "error",
+      "jsdoc/require-param-type": "off",
       "jsdoc/require-returns-check": "error",
       "jsdoc/require-returns-description": "error",
+      "jsdoc/require-returns-type": "off",
       "tsdoc/syntax": "error"
     },
     "overrides": [
