--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -8,10 +8,10 @@
     "depcheck": "depcheck",
     "lint": "eslint . --ext .ts,.js --quiet --fix",
     "pretest": "npm run lint && npm run depcheck",
-    "test:basic:ts": "nyc mocha \"tests/basic/*.test.ts\"",
-    "test:basic:js": "nyc mocha \"tests/basic/*.test.js\"",
-    "test": "npm run test:basic:ts && npm run test:basic:js",
-    "test:redis": "nyc mocha \"tests/redis/*.test.js\"",
+    "test:ts": "nyc mocha \"tests/**/*.test.ts\"",
+    "test:js": "nyc mocha \"tests/**/*.test.js\" --exclude \"tests/redis/**/*.test.js\"",
+    "test": "npm run test:ts && npm run test:js",
+    "test:redis": "nyc mocha \"tests/redis/**/*.test.js\"",
     "redis": "npm run redis --prefix ../packages/core",
     "redis:shutdown": "npm run redis:shutdown --prefix ../packages/core",
     "redis:debug": "npm run redis:debug --prefix ../packages/core",
