--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -177,8 +177,7 @@
     "snyk": "^1.320.5",
     "tmp": "^0.2.0",
     "tslib": "^1.10.0",
-    "utility-types": "^3.10.0",
-    "webapi-parser": "^0.5.0"
+    "utility-types": "^3.10.0"
   },
   "dependencies": {
     "@commerce-apps/core": "^1.4.4-beta.0",
