--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "publish": "lerna publish from-git --yes"
   },
   "dependencies": {
+    "@commerce-apps/raml-toolkit": "^0.4.0",
     "fetch-to-curl": "^0.3.0",
     "fs-extra": "~8.1.0",
     "make-fetch-happen": "~7.1.1"
