Rename operation list funcs to match convention.

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -25,7 +25,7 @@
     "test:debug": "nyc mocha \"test/**/*.test.ts\"",
     "clean:node": "rm -rf node_modules",
     "clean:all": "npm run clean:node",
-    "buildOperationList": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts buildOperationList",
+    "renderOperationList": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderOperationList",
     "renderTemplates": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderTemplates",
     "updateApis": "npm run updateApisOnly && npm run updateApiDocs",
     "updateApiDocs": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderApiClients",
