Integrate diff tool with updateApis

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -157,7 +157,6 @@
     "@types/gulp": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.28.0",
-    "amf-client-js": "^4.0.6",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "conditional-type-checks": "^1.0.5",
@@ -174,6 +173,7 @@
     "loglevel": "^1.6.8",
     "mocha": "^7.0.1",
     "nyc": "^15.0.0",
+    "sinon": "^7.5.0",
     "snyk": "^1.320.5",
     "tmp": "^0.2.0",
     "tslib": "^1.10.0",
