--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -28,7 +28,7 @@
     "renderOperationList": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderOperationList",
     "renderTemplates": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderTemplates",
     "updateApis": "npm run updateApisOnly && npm run updateApiDocs",
-    "updateApiDocs": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderApiClients",
+    "updateApiDocs": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderDocumentation",
     "updateApisOnly": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts updateApis",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect"
