Remove unnecessary path.joins, refactor compare arrays and other improvements

--- a/.gitignore
+++ b/.gitignore
@@ -69,9 +69,8 @@ dist
 # Release folders
 packages/*/dist
 packages/generator/renderedTemplates/
-apiBackup
 .vscode
-ramlDiff.json
+updateApiTmpDir
 
 reports*
 
