--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -172,6 +172,7 @@
     "gulp-typescript": "^5.0.1",
     "handlebars": "^4.7.6",
     "handlebars-helpers": "^0.10.0",
+    "js-yaml": "^3.14.0",
     "lint-staged": "^10.1.3",
     "loglevel": "^1.6.8",
     "mocha": "^7.0.1",
