--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -121,6 +121,7 @@
   "dependencies": {
     "@commerce-apps/raml-toolkit": "^0.4.2",
     "@keyv/redis": "^2.1.1",
+    "quick-lru" : "^5.1.1",
     "dotenv": "~8.2.0",
     "fetch-to-curl": "^0.3.0",
     "ioredis": "^4.16.2",
@@ -132,8 +133,7 @@
     "minipass-fetch": "^1.2.1",
     "qs": "~6.9.1",
     "retry": "^0.12.0",
-    "ssri": "^7.1.0",
-    "tmp": "~0.2.0"
+    "ssri": "^7.1.0"
   },
   "snyk": true
 }
