--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -25,10 +25,11 @@
     "test:debug": "nyc mocha \"test/**/*.test.ts\"",
     "clean:node": "rm -rf node_modules",
     "clean:all": "npm run clean:node",
-    "start": "node dist/index.js",
-    "buildOperationList": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts buildOperationList",
+    "renderOperationList": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderOperationList",
     "renderTemplates": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderTemplates",
-    "updateApis": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts updateApis",
+    "updateApis": "npm run updateApisOnly && npm run updateApiDocs",
+    "updateApiDocs": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderDocumentation",
+    "updateApisOnly": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts updateApis",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect"
   },
@@ -131,8 +132,10 @@
         }
       ],
       "jsdoc/require-param-name": "error",
+      "jsdoc/require-param-type": "off",
       "jsdoc/require-returns-check": "error",
       "jsdoc/require-returns-description": "error",
+      "jsdoc/require-returns-type": "off",
       "tsdoc/syntax": "error"
     },
     "overrides": [
@@ -169,6 +172,7 @@
     "gulp-typescript": "^5.0.1",
     "handlebars": "^4.7.6",
     "handlebars-helpers": "^0.10.0",
+    "js-yaml": "^3.14.0",
     "lint-staged": "^10.1.3",
     "loglevel": "^1.6.8",
     "mocha": "^7.0.1",
