--- a/package.json
+++ b/package.json
@@ -27,11 +27,7 @@
     "test:generator": "lerna run --scope commerce-sdk test:debug",
     "publish": "lerna publish from-git --yes"
   },
-  "dependencies": {
-    "fetch-to-curl": "^0.4.0",
-    "fs-extra": "~8.1.0",
-    "make-fetch-happen": "~7.1.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/chai": "^4.2.3",
