--- a/package.json
+++ b/package.json
@@ -27,49 +27,34 @@
     "test:generator": "lerna run --scope commerce-sdk test:debug",
     "publish": "lerna publish from-git --yes"
   },
-  "dependencies": {
-    "fetch-to-curl": "^0.3.0",
-    "fs-extra": "~8.1.0",
-    "make-fetch-happen": "~7.1.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/chai": "^4.2.3",
     "@types/chai-as-promised": "^7.1.2",
-    "@types/chai-spies": "^1.0.1",
-    "@types/fancy-log": "^1.3.1",
-    "@types/fetch-mock": "^7.3.1",
     "@types/fs-extra": "^8.0.0",
     "@types/handlebars-helpers": "^0.5.2",
     "@types/lodash": "^4.14.146",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.9",
-    "@types/node-fetch": "^2.5.2",
     "@types/qs": "^6.5.3",
-    "@types/simple-oauth2": "^2.5.0",
     "@types/sinon": "^7.5.0",
     "@types/tmp": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chai-spies": "^1.0.0",
-    "chai-string": "^1.5.0",
     "conditional-type-checks": "^1.0.5",
     "cross-env": "^5.2.0",
-    "del": "^5.1.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.4.0",
     "eslint-config-xo": "^0.27.1",
     "eslint-config-xo-typescript": "^0.19.0",
     "eslint-plugin-header": "^3.0.0",
-    "fancy-log": "^1.3.3",
-    "fetch-mock": "^7.4.0",
     "handlebars": "^4.7.6",
     "handlebars-helpers": "^0.10.0",
     "lerna": "^3.20.2",
     "mocha": "^6.2.0",
-    "node-fetch": "^2.6.0",
     "nyc": "^14.1.1",
     "qs": "^6.9.0",
     "sinon": "^7.5.0",
@@ -77,7 +62,6 @@
     "tmp": "^0.2.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5",
-    "webapi-parser": "^0.4.1",
     "xo": "^0.25.3"
   }
 }
