--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "depcheck": "depcheck",
-    "lint": "eslint \"**/*.ts\" --quiet --fix",
+    "lint": "npm run lint:dev -- --quiet",
+    "lint:dev": "eslint . --ext .ts --fix",
     "pretest": "npm run lint && npm run depcheck",
     "build": "tsc",
     "test": "nyc mocha \"test/**/*.test.ts\" --reporter=xunit --reporter-options output=../../reports/core.xml",
@@ -76,6 +77,7 @@
       "ecmaVersion": 2018,
       "sourceType": "module"
     },
+    "reportUnusedDisableDirectives": true,
     "rules": {
       "@typescript-eslint/interface-name-prefix": [
         "error",
