Disble return type check in JS files.

--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -121,6 +121,7 @@
         ],
         "rules": {
           "tsdoc/syntax": "off",
+          "@typescript-eslint/explicit-function-return-type": "off",
           "@typescript-eslint/interface-name-prefix": "off",
           "@typescript-eslint/no-var-requires": "off"
         }
