Add a function to export headers object as map

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "postinstall": "lerna bootstrap --hoist",
     "updateApis": "lerna run updateApis",
     "build": "lerna run build",
-    "redis": "npm run redis --prefix ./package/core",
-    "redis:shutdown": "npm run redis:shutdown --prefix ./package/core",
-    "redis:debug": "npm run redis:debug --prefix ./package/core",
-    "redis:debug:shutdown": "npm run redis:debug:shutdown --prefix ./package/core",
+    "redis": "npm run redis --prefix ./packages/core",
+    "redis:shutdown": "npm run redis:shutdown --prefix ./packages/core",
+    "redis:debug": "npm run redis:debug --prefix ./packages/core",
+    "redis:debug:shutdown": "npm run redis:debug:shutdown --prefix ./packages/core",
     "test": "lerna run test",
     "test:debug": "lerna run test:debug",
     "test:integration:bundle": "lerna run test:integration",
