Initial commit of docs

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:all": "npm run test && npm run test:integration",
     "test:all:redis": "npm run test && npm run test:integration:redis",
     "test:all:redis:debug": "npm run test && npm run test:integration:redis:debug",
+    "doc": "lerna run doc",
     "clean": "lerna run clean && npm run clean --prefix ./integrationTests",
     "clean:node": "lerna run clean:node && npm run clean:node --prefix ./integrationTests",
     "clean:all": "npm run clean && npm run clean:node && npm run clean:all --prefix ./integrationTests",
@@ -61,6 +62,7 @@
     "source-map-support": "^0.5.16",
     "tmp": "^0.2.0",
     "ts-node": "^8.6.2",
+    "typedoc": "^0.17.7",
     "typescript": "^3.7.5",
     "xo": "^0.25.3"
   }
