Adding typedoc-plugin-external-module-map to depcheck ignore list

--- a/packages/generator/.depcheckrc.yml
+++ b/packages/generator/.depcheckrc.yml
@@ -1,13 +1,15 @@
-ignores: [
-  "@types/chai",
-  "chai",
-  "depcheck",
-  "eslint*",
-  "gulp-typescript",
-  "mocha",
-  "nyc",
-  "prettier",
-  "tslib",
-  "typescript",
-  "utility-types"
-]
+ignores:
+  [
+    '@types/chai',
+    'chai',
+    'depcheck',
+    'eslint*',
+    'gulp-typescript',
+    'mocha',
+    'nyc',
+    'prettier',
+    'tslib',
+    'typescript',
+    'typedoc-plugin-external-module-map',
+    'utility-types',
+  ]
