--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "depcheck": "depcheck",
-    "lint": "eslint . --ext .ts,.js --quiet --fix",
+    "lint": "npm run lint:dev -- --quiet",
+    "lint:dev": "eslint . --ext .ts,.js --fix",
     "pretest": "npm run lint && npm run depcheck",
     "test:ts": "nyc mocha \"tests/**/*.test.ts\"",
     "test:js": "nyc mocha \"tests/**/*.test.js\" --exclude \"tests/redis/**/*.test.js\"",
@@ -71,6 +72,7 @@
       "ecmaVersion": 2018,
       "sourceType": "module"
     },
+    "reportUnusedDisableDirectives": true,
     "rules": {
       "jsdoc/require-param-name": "error",
       "jsdoc/require-returns-check": "error",
@@ -119,6 +121,7 @@
         ],
         "rules": {
           "tsdoc/syntax": "off",
+          "@typescript-eslint/explicit-function-return-type": "off",
           "@typescript-eslint/interface-name-prefix": "off",
           "@typescript-eslint/no-var-requires": "off"
         }
