Removed lerna command from scripts.doc

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:all": "npm run test && npm run test:integration",
     "test:all:redis": "npm run test && npm run test:integration:redis",
     "test:all:redis:debug": "npm run test && npm run test:integration:redis:debug",
-    "doc": "lerna run doc",
+    "doc": "npm run doc --prefix ./packages/generator",
     "clean": "lerna run clean && npm run clean --prefix ./integrationTests",
     "clean:node": "lerna run clean:node && npm run clean:node --prefix ./integrationTests",
     "clean:all": "npm run clean && npm run clean:node && npm run clean:all --prefix ./integrationTests",
