Creating a .nojekyll directive to allow files that start with _ to show in github pages

--- a/packages/generator/.depcheckrc.yml
+++ b/packages/generator/.depcheckrc.yml
@@ -11,5 +11,6 @@ ignores:
     'tslib',
     'typescript',
     'typedoc-plugin-external-module-map',
+    'typedoc-plugin-nojekyll',
     'utility-types',
   ]
