--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -185,6 +185,7 @@
     "snyk": "^1.320.5",
     "tmp": "^0.2.0",
     "tslib": "^1.10.0",
+    "typedoc-plugin-nojekyll": "^1.0.1",
     "utility-types": "^3.10.0"
   },
   "dependencies": {
