--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -24,7 +24,7 @@
     "build": "npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
     "test": "nyc mocha \"test/**/*.test.ts\" --reporter=xunit --reporter-options output=../../reports/generator.xml",
     "test:debug": "nyc mocha \"test/**/*.test.ts\"",
-    "doc": "typedoc --mode modules --out ../../docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"",
+    "doc": "typedoc --mode modules --out ../../docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\" && cp APICLIENTS.md ../../docs && cp CHANGELOG.md ../../docs",
     "clean:node": "rm -rf node_modules",
     "clean:all": "npm run clean:node",
     "renderOperationList": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderOperationList",
@@ -185,14 +185,15 @@
     "snyk": "^1.320.5",
     "tmp": "^0.2.0",
     "tslib": "^1.10.0",
+    "typedoc": "^0.17.8",
+    "typedoc-plugin-external-module-map": "^1.2.1",
     "typedoc-plugin-nojekyll": "^1.0.1",
     "utility-types": "^3.10.0"
   },
   "dependencies": {
     "@commerce-apps/core": "^1.4.5-beta.0",
     "lodash": "^4.17.15",
-    "retry": "^0.12.0",
-    "typedoc-plugin-external-module-map": "^1.2.1"
+    "retry": "^0.12.0"
   },
   "snyk": true
 }
