--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/chai-as-promised": "^7.1.2",
     "@types/fs-extra": "^8.0.0",
     "@types/handlebars-helpers": "^0.5.2",
+    "@types/ioredis": "^4.17.0",
     "@types/lodash": "^4.14.146",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.9",
