--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -27,11 +27,8 @@
     "doc": "typedoc --mode modules --out ../../docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\" && cp APICLIENTS.md ../../docs && cp CHANGELOG.md ../../docs",
     "clean:node": "rm -rf node_modules",
     "clean:all": "npm run clean:node",
-    "renderOperationList": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderOperationList",
     "renderTemplates": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderTemplates",
-    "updateApis": "npm run updateApisOnly && npm run updateApiDocs",
-    "updateApiDocs": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderDocumentation",
-    "updateApisOnly": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts updateApis",
+    "updateApis": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts updateApis",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect"
   },
@@ -91,7 +88,6 @@
       "ecmaVersion": 2018,
       "sourceType": "module"
     },
-    "reportUnusedDisableDirectives": true,
     "rules": {
       "@typescript-eslint/interface-name-prefix": [
         "error",
