Updated to remove need for apiclients.md

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -24,7 +24,7 @@
     "build": "npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
     "test": "nyc mocha \"test/**/*.test.ts\" --reporter=xunit --reporter-options output=../../reports/generator.xml",
     "test:debug": "nyc mocha \"test/**/*.test.ts\"",
-    "doc": "typedoc --mode modules --out ../../docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\" && cp APICLIENTS.md ../../docs && cp CHANGELOG.md ../../docs",
+    "doc": "typedoc --mode modules --out ../../docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"  && cp CHANGELOG.md ../../docs",
     "clean:node": "rm -rf node_modules",
     "clean:all": "npm run clean:node",
     "renderTemplates": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderTemplates",
