Initial test is passing

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -22,8 +22,8 @@
     "lint:dev": "eslint . --ext .ts --fix",
     "pretest": "npm run lint && npm run depcheck",
     "build": "npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
-    "test": "nyc mocha \"test/**/*.test.ts\" --reporter=xunit --reporter-options output=../../reports/generator.xml",
-    "test:debug": "nyc mocha \"test/**/*.test.ts\"",
+    "test": "nyc mocha \"test/**/commerceTemplateHelper.test.ts\"",
+    "test:debug": "nyc mocha \"test/**/commerceTemplateHelper.test.ts\"",
     "doc": "typedoc --mode modules --out ../../docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\" && cp APICLIENTS.md ../../docs && cp CHANGELOG.md ../../docs",
     "clean:node": "rm -rf node_modules",
     "clean:all": "npm run clean:node",
