Final Review: Removing T postfix from types and adding a "namespace" (#229)
Removing T from types and adding a types. namespace, enabled via a custom helper.

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -165,6 +165,7 @@
     "conditional-type-checks": "^1.0.5",
     "depcheck": "^0.9.2",
     "dotenv": "^8.2.0",
+    "eslint": "^7.4.0",
     "eslint-plugin-jsdoc": "^25.4.0",
     "eslint-plugin-tsdoc": "^0.2.4",
     "fs-extra": "^9.0.0",
